# Cpp_1k

./: .gitignore  CMakeLists.txt  README.md
book_phone/: CMakeLists.txt
book_phone/include/: address.h  book_phone.h  operators.h  phone_entry.h  phone_number.h
book_phone/src/: address.cpp  book_phone_app.cpp  phone_entry.cpp
decanat/: CMakeLists.txt
decanat/include/: address.h  contact.h  decanat.h  personal.h  ticket.h  utils.h
decanat/src/: decanat.cpp
gui/: CMakeLists.txt
gui/simple_fltk/: CMakeLists.txt
gui/simple_fltk/include/: simple_fltk.h
gui/simple_fltk/src/: simple_fltk.cpp  simple_fltk_app.cpp
libs/: CMakeLists.txt
libs/math/: CMakeLists.txt
phone_book/include/: address.h  operators.h  phone_book.h  phone_entry.h  phone_number.h
phone_book/src/: address.cpp  operators.cpp  phone_book.cpp  phone_book_app.cpp  phone_entry.cpp
pointers/: CMakeLists.txt
pointers/raw/: CMakeLists.txt
pointers/raw/include/: matrix.h
pointers/raw/src/: matrix.cpp  raw_pointer_app.cpp
pointers/smart/: CMakeLists.txt
pointers/smart/include/: app.h  point.h  smart-ptr.h  tuple.h
pointers/smart/src/: app.cpp  smart_pointer_app.cpp
pointers/smart/test/: smart_ptr.cpp
random/: CMakeLists.txt
random/include/: random_app.h
random/src/: random_app.cpp
shapes/: CMakeLists.txt
shapes/include/: context.h  shapes.h
shapes/src/: shapes_app.cpp
templates/: CMakeLists.txt
templates/classes/: CMakeLists.txt
templates/classes/include/: point.h
templates/classes/src/: class-templates.cpp
templates/functions/: CMakeLists.txt
templates/functions/include/: search.h
templates/functions/src/: function-templates-app.cpp
vectors/: CMakeLists.txt
vectors/include/: vectors.h
vectors/src/: vectors.cpp
